tests/expand/invalid_usage/multiple_struct.fail.rs

fn main(){
    #[clappen::clappen(export = prefix)]
    mod m1 {
        pub struct A {}
        pub struct B {}
    }
}
